Add the ability to download the template csv file

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       
       <button type="submit">Process CSV</button>
     </form>
+
+    <!-- Add a button to download template CSV file -->
+    <a href="/download" download="template.csv">
+    <button>Download Template CSV</button>
+
   </div>
 </body>
 </html>
