Update template button functionality

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
     </form>
 
     <!-- Add a button to download template CSV file -->
-    <a href="/download" download="template.csv">
-    <button>Download Template CSV</button>
+    <a href="/download/template.csv" download>
+    <button type="button">Download Template CSV</button>
+    </a>
 
   </div>
 </body>
