one more template path adjustment

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Add a button to download template CSV file -->
     <a href="/download/template.csv" download>
-    <button type="button">Download Template CSV</button>
+      <button>Download Template CSV</button>
     </a>
 
   </div>
